# ai_academy_assignments

./: .gitignore  README.md  ddd.py  lets_try_tests.py  pyproject.toml  requirements.txt  some_other.csv
module_1/: README.md
module_1/Linear Algebra/my_submissions/Bayram_Bayramov_Assignment_1/: Bayram_Bayramov_Assignment_1.py
module_1/Linear Algebra/my_submissions/Bayram_Bayramov_Assignment_2/: Bayram_Bayramov_Assignment_2.py
module_1/Linear Algebra/my_submissions/Bayram_Bayramov_Assignment_3/: Bayram_Bayramov_Assignment_3.py
module_1/Linear Algebra/my_submissions/Bayram_Bayramov_Assignment_4/: Math4AI_LinearAlgebra_Bayram_Bayramov_Assignment4_Code.py
module_1/Linear Algebra/my_submissions/Math4AI_LinearAlgebra_Bayram_Bayramov_Assignment5/: Math4AI_LinearAlgebra_Bayram_Bayramov_Assignment5_Code.py
module_1/Linear Algebra/my_submissions/Math4AI_LinearAlgebra_Bayram_Bayramov_Assignment6/: Math4AI_LinearAlgebra_Bayram_Bayramov_Assignment6_Code.py
module_1/Linear Algebra/my_submissions/Math4AI_LinearAlgebra_Bayram_Bayramov_Assignment7/: Math4AI_LinearAlgebra_Bayram_Bayramov_Assignment7_Code.py
module_1/Linear Algebra/my_submissions/Math4AI_LinearAlgebra_Bayram_Bayramov_Assignment8/: Math4AI_LinearAlgebra_Bayram_Bayramov_Assignment8_Code.py
module_2/: README.md
module_2/week_1/: tasks.py
module_2/week_2/: classes.py  equation_solver.py  error_module.py  in_lesson.py  other_module.py  saturday.py  some.csv  tasks.py  tasks_2.py  tasks_3.py  tasks_4.py
module_2/week_3/: in_lesson.py  tasks.py  tuesday.py
(+14 files in other folders)
