[project]
name = "assignments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "matplotlib>=3.10.8",
    "multipledispatch>=1.0.0",
    "numpy>=2.4.4",
    "requests>=2.33.1",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]
